--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   "dependencies": {
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "chart.js": "^4.4.0",
     "datatables.net-bs5": "^1.12.1",
+    "excel4node": "^1.8.2",
     "fullcalendar": "^5.11.3",
     "jquery": "^3.6.1",
     "leaflet": "^1.9.2",
-    "sweetalert2": "^11.4.38"
+    "read-excel-file": "^4.1.0",
+    "sweetalert2": "^11.4.38",
+    "xlsx": "^0.18.5"
   }
 }
